2009-09-14  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): suggest cvs/savannah instead of
	wget/gnu.org because there is no ffcall tarball on gnu.org

2009-09-14  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): upcase the features for messages and variables
	Thanks to Eric Blake <ebb9@byu.net> for much enlightening!

2009-09-13  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (set_dynamic_module_location): *user-lib-directory*
	may be NIL which is not a valid pathname designator

2009-09-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (BUILD_AUX): when verbose, report it
	(full): pass CLISP=... to clisp-link to possibly override the user
	setting pointing somewhere else;
	[with_dynamic_modules]: mkdir dynmod

2009-09-13  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): check for a specified list of features
	(CL_CLISP_NEED_FFI): remove
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): fix AC_REQUIRE(CL_CLISP)
	* modules/dbus/configure.in, modules/fastcgi/configure.in:
	* modules/gtk2/configure.in, modules/oracle/configure.in:
	* modules/pari/configure.in, modules/postgresql/configure.in:
	* modules/readline/configure.in, modules/wildcard/configure.in:
	* modules/zlib/configure.in: replace CL_CLISP_NEED_FFI with an
	argument to CL_MODULE_COMMON_CHECKS

2009-09-13  Sam Steingold  <sds@gnu.org>

	* modules/i18n/configure.in: remove the spurious FFI dependency

2009-09-12   Aleksej Saushev  <asau@inbox.ru>

	* makemake.in (INSTALL_SCRIPT): use instead of INSTALL_PROGRAM for
	clisp-link (avoids stripping the script, which is a problem on NetBSD)

2009-09-11  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): use cl_use_clisp instead of
	cl_cv_use_clisp to avoid unnecessary caching

2009-09-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-doc): pass "--tries=1" to wget,
	"-connect_timeout=10" to lynx and
	"--max-time 10" to curl to limit wait time;
	try only one of wget/lynx/curl, not every one of them in order