@@ -1,3 +1,8 @@
+2009-09-17  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* xthread.d (spinlock_release) [I80386, AMD64]: add gcc optimization
+	barrier (reimplemented in inline asm)
+
 2009-09-14  Sam Steingold  <sds@gnu.org>
 
 	* m4/ffcall.m4 (CL_FFCALL): suggest cvs/savannah instead of
